--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
